--- a/MeetManagerPrism/MainWindow.xaml
+++ b/MeetManagerPrism/MainWindow.xaml
@@ -1,12 +1,106 @@
-﻿<Window x:Class="MeetManagerPrism.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MeetManagerPrism"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+﻿<Window
+    x:Class="MeetManagerPrism.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:MeetManagerPrism"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="MainWindow"
+    Width="800"
+    Height="450"
+    mc:Ignorable="d">
+    <!--<Window.Resources>
+        <converters:BoolToVisibilityConverter x:Key="BoolToVisibility" />
+        <converters:BoolToVisibilityConverter x:Key="InverseBoolToVisibility" Invert="True" />
+    </Window.Resources>-->
+
+
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="80" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="70*" />
+            <ColumnDefinition Width="30*" MinWidth="450" />
+        </Grid.ColumnDefinitions>
+
+
+        <StackPanel
+            Grid.Row="0"
+            Grid.Column="0"
+            Orientation="Horizontal">
+            <Button
+                Margin="10,0"
+                Padding="10,5"
+                VerticalAlignment="Center"
+                Command="{Binding NavigateToHomePageCommand}"
+                Content="Home" />
+            <Button
+                Margin="10,0"
+                Padding="10,5"
+                VerticalAlignment="Center"
+                Command="{Binding NavigateToEventsPageCommand}"
+                Content="Events" />
+            <Button
+                Margin="10,0"
+                Padding="10,5"
+                VerticalAlignment="Center"
+                Command="{Binding NavigateToAddEventPageCommand}"
+                Content="Manager"
+                Visibility="{Binding ManagerPageVisibility}" />
+            <Button
+                Margin="10,0"
+                Padding="10,5"
+                VerticalAlignment="Center"
+                Command="{Binding NavigateToAdminPageCommand}"
+                Content="Admin"
+                Visibility="{Binding AdminPageVisibility}" />
+
+
+        </StackPanel>
+
+
+        <StackPanel
+            Grid.Column="1"
+            HorizontalAlignment="Right"
+            Orientation="Horizontal">
+
+            <TextBlock
+                Margin="10,0"
+                VerticalAlignment="Center"
+                Text="{Binding UserName}" />
+            <!--  Visibility="{Binding LoginVisibility, Converter={StaticResource BoolToVisibility}}"  -->
+            <Button
+                Margin="10,0"
+                Padding="10,5"
+                VerticalAlignment="Center"
+                Command="{Binding LogoutCommand}"
+                Content="Logout" />
+            <!--  Visibility="{Binding LoginVisibility, Converter={StaticResource BoolToVisibility}}"  -->
+
+            <Button
+                Margin="10,0"
+                Padding="10,5"
+                VerticalAlignment="Center"
+                Command="{Binding NavigateToRegisterCommand}"
+                Content="Register" />
+            <!--  Visibility="{Binding LoginVisibility, Converter={StaticResource InverseBoolToVisibility}}"  -->
+            <Button
+                Margin="10,0"
+                Padding="10,5"
+                VerticalAlignment="Center"
+                Command="{Binding NavigateToLoginCommand}"
+                Content="Login" />
+            <!--  Visibility="{Binding LoginVisibility, Converter={StaticResource InverseBoolToVisibility}}"  -->
+        </StackPanel>
+
+
+        <Frame
+            x:Name="FrameMW"
+            Grid.Row="1"
+            Grid.ColumnSpan="2"
+            NavigationUIVisibility="Hidden" />
 
     </Grid>
 </Window>
