--- a/MeetManagerPrism/App.xaml
+++ b/MeetManagerPrism/App.xaml
@@ -1,20 +1,21 @@
-﻿<Application
+﻿<prism:PrismApplication
     x:Class="MeetManagerPrism.App"
+    xmlns:prism="http://prismlibrary.com/"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:MeetManagerPrism"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
-    <Application.Resources>
+    <prism:PrismApplication.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <!--<materialDesign:BundledTheme BaseTheme="Light" PrimaryColor="DeepPurple" SecondaryColor="Lime" />-->
                 <materialDesign:BundledTheme
-                    BaseTheme="Dark"
-                    PrimaryColor="DeepPurple"
-                    SecondaryColor="Lime" />
+                    BaseTheme="Light"
+                    PrimaryColor="Amber"
+                    SecondaryColor="Red" />
 
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesign2.Defaults.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-    </Application.Resources>
-</Application>
+    </prism:PrismApplication.Resources>
+</prism:PrismApplication>
