--- a/MeetManagerPrism/MainWindow.xaml
+++ b/MeetManagerPrism/MainWindow.xaml
@@ -5,6 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:MeetManagerPrism"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:prism="http://prismlibrary.com/"
     Title="MainWindow"
     Width="800"
     Height="450"
@@ -15,7 +16,7 @@
     </Window.Resources>-->
 
 
-    <Grid>
+    <Grid Background="#161616">
         <Grid.RowDefinitions>
             <RowDefinition Height="80" />
             <RowDefinition />
@@ -96,11 +97,10 @@
         </StackPanel>
 
 
-        <Frame
-            x:Name="FrameMW"
+        <ContentControl
             Grid.Row="1"
             Grid.ColumnSpan="2"
-            NavigationUIVisibility="Hidden" />
+            prism:RegionManager.RegionName="MainRegion" />
 
     </Grid>
 </Window>
