--- a/MeetManagerPrism/View/Pages/LoginPage.xaml
+++ b/MeetManagerPrism/View/Pages/LoginPage.xaml
@@ -1,13 +1,11 @@
-﻿<Page
+﻿<UserControl
     x:Class="MeetManagerPrism.View.Pages.LoginPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:UserControls="clr-namespace:MeetManagerPrism.View.UserControls"
     xmlns:UC="clr-namespace:MeetManagerPrism.View.UserControls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:MeetManagerPrism.View.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="LoginPage"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
@@ -82,4 +80,4 @@
 
         </StackPanel>
     </Grid>
-</Page>
+</UserControl>
