--- a/MeetManagerPrism/View/Pages/RegisterPage.xaml
+++ b/MeetManagerPrism/View/Pages/RegisterPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<UserControl
     x:Class="MeetManagerPrism.View.Pages.RegisterPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,7 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:MeetManagerPrism.View.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="RegisterPage"
+    
     d:DesignHeight="450"
     d:DesignWidth="800"
     FontSize="30"
@@ -83,4 +83,4 @@
 
         </StackPanel>
     </Grid>
-</Page>
+</UserControl>
