--- a/MeetManagerPrism/App.xaml
+++ b/MeetManagerPrism/App.xaml
@@ -1,10 +1,10 @@
 ﻿<prism:PrismApplication
     x:Class="MeetManagerPrism.App"
-    xmlns:prism="http://prismlibrary.com/"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:MeetManagerPrism"
-    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:prism="http://prismlibrary.com/">
     <prism:PrismApplication.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
