Problem with datacontext

--- a/MeetManagerPrism/Views/RegisterPage.xaml
+++ b/MeetManagerPrism/Views/RegisterPage.xaml
@@ -1,11 +1,14 @@
 ﻿<UserControl
-    x:Class="MeetManagerPrism.View.Pages.RegisterPage"
+    x:Class="MeetManagerPrism.Views.RegisterPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:UserControls="clr-namespace:MeetManagerPrism.View.UserControls"
+    xmlns:UserControls="clr-namespace:MeetManagerPrism.Views.UserControls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:MeetManagerPrism.View.Pages"
+    xmlns:local="clr-namespace:MeetManagerPrism.Views"
+    xmlns:prism="http://prismlibrary.com/"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewmodel="clr-namespace:MeetManagerPrism.ViewModel"
+    d:DataContext="{d:DesignInstance Type=viewmodel:RegisterPageViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     FontSize="30"
