--- a/MeetManagerPrism/MainWindow.xaml
+++ b/MeetManagerPrism/MainWindow.xaml
@@ -37,7 +37,7 @@
                 Margin="10,0"
                 Padding="10,5"
                 VerticalAlignment="Center"
-                Command="{Binding NavigateToHomePageCommand}"
+                Command="{Binding NavHomeCommand}"
                 Content="Home" />
             <Button
                 Margin="10,0"
@@ -86,14 +86,14 @@
                 Margin="10,0"
                 Padding="10,5"
                 VerticalAlignment="Center"
-                Command="{Binding NavigateToRegisterCommand}"
+                Command="{Binding NavRegisterCommand}"
                 Content="Register" />
             <!--  Visibility="{Binding LoginVisibility, Converter={StaticResource InverseBoolToVisibility}}"  -->
             <Button
                 Margin="10,0"
                 Padding="10,5"
                 VerticalAlignment="Center"
-                Command="{Binding NavigateCommand}"
+                Command="{Binding NavLoginCommand}"
                 Content="Login" />
             <!--  Visibility="{Binding LoginVisibility, Converter={StaticResource InverseBoolToVisibility}}"  -->
         </StackPanel>
