--- a/MeetManagerPrism/Views/UserControls/Input.xaml
+++ b/MeetManagerPrism/Views/UserControls/Input.xaml
@@ -1,9 +1,9 @@
 ﻿<UserControl
-    x:Class="MeetManagerPrism.View.UserControls.Input"
+    x:Class="MeetManagerPrism.Views.UserControls.Input"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:MeetManagerPrism.View.UserControls"
+    xmlns:local="clr-namespace:MeetManagerPrism.Views.UserControls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     x:Name="root"
     d:DesignHeight="50"
