--- a/MeetManagerPrism/Views/Manager/ManagerPage.xaml
+++ b/MeetManagerPrism/Views/Manager/ManagerPage.xaml
@@ -7,8 +7,10 @@
     xmlns:manager="clr-namespace:MeetManagerPrism.ViewModels.Manager"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:prism="http://prismlibrary.com/"
     d:DesignHeight="450"
     d:DesignWidth="800"
+    prism:ViewModelLocator.AutoWireViewModel="True"
     FontSize="30"
     Foreground="#FFD340"
     mc:Ignorable="d">
