--- a/MeetManagerPrism/App.xaml
+++ b/MeetManagerPrism/App.xaml
@@ -10,7 +10,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <!--<materialDesign:BundledTheme BaseTheme="Light" PrimaryColor="DeepPurple" SecondaryColor="Lime" />-->
                 <materialDesign:BundledTheme
-                    BaseTheme="Light"
+                    BaseTheme="Dark"
                     PrimaryColor="Amber"
                     SecondaryColor="Red" />
 
