--- a/MeetManagerPrism/Views/Admin/AdminPage.xaml
+++ b/MeetManagerPrism/Views/Admin/AdminPage.xaml
@@ -2,12 +2,14 @@
     x:Class="MeetManagerPrism.Views.Admin.AdminPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:admin="clr-namespace:MeetManagerPrism.ViewModels.Admin"
     xmlns:converters="clr-namespace:MeetManagerPrism.Common.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:MeetManagerPrism.Views.Admin"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
     xmlns:viewmodel="clr-namespace:MeetManagerPrism.ViewModels"
+    d:DataContext="{d:DesignInstance Type=admin:AdminViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     prism:ViewModelLocator.AutoWireViewModel="True"
@@ -18,8 +20,8 @@
 
     <Grid Background="#20448C">
         <Grid.RowDefinitions>
-            <RowDefinition Height="20*" />
-            <RowDefinition Height="80*" />
+            <RowDefinition Height="22*" />
+            <RowDefinition Height="78*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="75*" />
@@ -34,18 +36,24 @@
             Padding="10,5"
             HorizontalAlignment="Center"
             VerticalAlignment="Top"
-            Command="{Binding SaveChangesCommand}"
+            Command="{Binding SaveCommand}"
             Content="Uložit změny"
             FontSize="25"
             Foreground="#161616" />
+        <StackPanel>
 
-        <TextBlock
-            HorizontalAlignment="Center"
-            FontSize="50"
-            Foreground="#FFBC24"
-            Text="Admin Page" />
+            <TextBlock
+                HorizontalAlignment="Center"
+                FontSize="50"
+                Foreground="#FFBC24"
+                Text="Admin Page" />
 
-
+            <TextBlock
+                FontSize="20"
+                Foreground="Red"
+                Text="{Binding ErrorMessage}"
+                TextAlignment="Center" />
+        </StackPanel>
 
 
         <DataGrid
