--- a/MeetManagerPrism/Views/Manager/ManagerPage.xaml
+++ b/MeetManagerPrism/Views/Manager/ManagerPage.xaml
@@ -8,6 +8,7 @@
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
+    d:DataContext="{d:DesignInstance Type=manager:ManagerViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     prism:ViewModelLocator.AutoWireViewModel="True"
@@ -39,18 +40,18 @@
             <Button
                 Height="60"
                 Margin="0,10"
-                Command="{Binding NavigateToNewEventCommand}"
+                Command="{Binding NavCreateEventCommand}"
                 Content="Vytvořit" />
             <Button
                 Height="60"
                 Margin="0,10"
-                Command="{Binding NavigateToSeznamCommand}"
+                Command="{Binding NavSeznamCommand}"
                 Content="Seznam" />
 
 
         </StackPanel>
 
-        <Frame x:Name="FrameManagerWiew" Grid.Column="1" />
+        <ContentControl Grid.Column="1" prism:RegionManager.RegionName="ManagerRegion" />
 
     </Grid>
 
