--- a/MeetManagerPrism/Views/Manager/CreateEventPage.xaml
+++ b/MeetManagerPrism/Views/Manager/CreateEventPage.xaml
@@ -7,6 +7,7 @@
     xmlns:manager="clr-namespace:MeetManagerPrism.ViewModels.Manager"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
+    d:DataContext="{d:DesignInstance Type=manager:CreateEventViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     prism:ViewModelLocator.AutoWireViewModel="True"
@@ -60,11 +61,13 @@
                 Grid.Column="1"
                 MaxWidth="350"
                 Margin="5"
-                MaxLength="25" />
+                MaxLength="25"
+                Text="{Binding Name}" />
 
             <Label Grid.Row="1" Content="Začátek:" />
             <DatePicker
                 Grid.Row="1"
+                 SelectedDate="{Binding StartEvent}"
                 Grid.Column="1"
                 MaxWidth="350"
                 Margin="5" />
@@ -72,6 +75,7 @@
             <Label Grid.Row="2" Content="Konec:" />
             <DatePicker
                 Grid.Row="2"
+                SelectedDate="{Binding EndEvent}"
                 Grid.Column="1"
                 MaxWidth="350"
                 Margin="5" />
@@ -97,10 +101,12 @@
                 MaxWidth="350"
                 Margin="5"
                 DisplayMemberPath="Name"
+                SelectedValue="{Binding SelectedRoom}"
                 ItemsSource="{Binding DataContext.RoomList, RelativeSource={RelativeSource AncestorType=Page}}" />
 
             <Label Grid.Row="5" Content="Popis:" />
-            <RichTextBox
+            <TextBox
+                Text="{Binding Description}"
                 Grid.Row="5"
                 Grid.Column="1"
                 MaxWidth="350"
