--- a/MeetManagerPrism/MainWindow.xaml
+++ b/MeetManagerPrism/MainWindow.xaml
@@ -9,8 +9,8 @@
     xmlns:prism="http://prismlibrary.com/"
     xmlns:viewmodels="clr-namespace:MeetManagerPrism.ViewModels"
     Title="MainWindow"
-    Width="1000"
-    Height="650"
+    Width="1280"
+    Height="720"
     d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel}"
     FontSize="30"
     mc:Ignorable="d">
@@ -26,8 +26,8 @@
             <RowDefinition />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="70*" />
-            <ColumnDefinition Width="30*" MinWidth="450" />
+            <ColumnDefinition Width="60*" />
+            <ColumnDefinition Width="40*" />
         </Grid.ColumnDefinitions>
 
 
@@ -67,9 +67,18 @@
 
         </StackPanel>
 
+        <TextBlock
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            FontSize="50"
+            Foreground="#FFBC24"
+            Text="{Binding PageTitle}" />
+
 
         <StackPanel
-            Grid.Column="1"
+            Grid.Column="2"
             HorizontalAlignment="Right"
             Orientation="Horizontal">
 
