--- a/MeetManagerPrism/Views/Users/Dashboard.xaml
+++ b/MeetManagerPrism/Views/Users/Dashboard.xaml
@@ -8,8 +8,8 @@
     xmlns:prism="http://prismlibrary.com/"
     xmlns:users="clr-namespace:MeetManagerPrism.ViewModels.Users"
     d:DataContext="{d:DesignInstance Type=users:DashboardViewModel}"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    d:DesignHeight="700"
+    d:DesignWidth="1200"
     prism:ViewModelLocator.AutoWireViewModel="True"
     FontSize="18"
     mc:Ignorable="d">
@@ -21,8 +21,8 @@
 
         <Grid.RowDefinitions>
             <RowDefinition Height="80" />
-            <RowDefinition />
-            <RowDefinition Height="auto" MinHeight="100" />
+            <RowDefinition Height="70*" MinHeight="250" />
+            <RowDefinition Height="30*" MinHeight="120" />
         </Grid.RowDefinitions>
 
         <TextBlock
@@ -124,7 +124,9 @@
                     </DataGridTemplateColumn.Header>
                 </DataGridTemplateColumn>
 
-                <DataGridTextColumn Binding="{Binding Name}" />
+                <DataGridTextColumn  Binding="{Binding Name}" />
+                <DataGridTextColumn  Binding="{Binding StartDate,StringFormat={}{0: hh.MM.yyyy}}" />
+                <DataGridTextColumn  Binding="{Binding EndDate,StringFormat={}{0: hh.MM.yyyy}}" />
             </DataGrid.Columns>
         </DataGrid>
 
