--- a/MeetManagerPrism/Views/LoginPage.xaml
+++ b/MeetManagerPrism/Views/LoginPage.xaml
@@ -8,7 +8,7 @@
     xmlns:prism="http://prismlibrary.com/"
     xmlns:uc="clr-namespace:MeetManagerPrism.Views.UserControls"
     xmlns:viewmodels="clr-namespace:MeetManagerPrism.ViewModels"
-    d:DataContext="{d:DesignInstance Type=viewmodels:LoginPageViewModel}"
+    d:DataContext="{d:DesignInstance Type=viewmodels:LoginViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     prism:ViewModelLocator.AutoWireViewModel="True"
@@ -37,13 +37,7 @@
             Command="{Binding InstaAccessCommand}"
             Content="Instant Access" />
 
-        <TextBlock
-            Grid.ColumnSpan="3"
-            Margin="0,0,0,15"
-            FontSize="60"
-            Foreground="#FFBC24"
-            Text="Login"
-            TextAlignment="Center" />
+
 
         <TextBlock
             Grid.Row="1"
