--- a/MeetManagerPrism/Views/Manager/ManagerPage.xaml
+++ b/MeetManagerPrism/Views/Manager/ManagerPage.xaml
@@ -8,7 +8,7 @@
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
-    d:DataContext="{d:DesignInstance Type=manager:ManagerViewModel}"
+    d:DataContext="{d:DesignInstance Type=manager:ManagerMainViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     prism:ViewModelLocator.AutoWireViewModel="True"
@@ -27,22 +27,14 @@
 
         <StackPanel HorizontalAlignment="Center">
 
-            <TextBlock
-                Margin="0,10,0,0"
-                HorizontalAlignment="Center"
-                FontSize="35"
-                Text="Event" />
-            <TextBlock
-                Margin="0,0,0,20"
-                FontSize="35"
-                Text="Manager" />
-
             <Button
+                Width="150"
                 Height="60"
-                Margin="0,10"
+                Margin="0,30, 0 ,10"
                 Command="{Binding NavCreateEventCommand}"
                 Content="Vytvořit" />
             <Button
+                Width="150"
                 Height="60"
                 Margin="0,10"
                 Command="{Binding NavSeznamCommand}"
