--- a/MeetManagerPrism/Views/Users/Dashboard.xaml
+++ b/MeetManagerPrism/Views/Users/Dashboard.xaml
@@ -20,21 +20,17 @@
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="80" />
-            <RowDefinition Height="70*" MinHeight="250" />
-            <RowDefinition Height="30*" MinHeight="120" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="65*" MinHeight="250" />
+            <RowDefinition Height="35*" MinHeight="120" />
         </Grid.RowDefinitions>
 
         <TextBlock
-            HorizontalAlignment="Center"
-            FontSize="55"
-            Foreground="#BD2A2E"
-            Text="DashBoard" />
-
-        <TextBlock
             Grid.Column="1"
+            Grid.Row="1"
+            Margin="0 20"
             HorizontalAlignment="Center"
-            VerticalAlignment="Center"
+            VerticalAlignment="Top"
             Foreground="White"
             Text="{Binding DateTime, StringFormat={}{0:dd.MM.yyyy HH:mm}}" />
 
